<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/detail_album_track_number_label"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="10"
        android:layout_height="wrap_content"
        android:text="@string/detail_album_track_name_label"
        android:textStyle="bold"
        android:gravity="start"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:text="@string/detail_album_track_duration_label"
        android:textStyle="bold"
        android:gravity="start"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/detail_album_track_open_track_url_label"
        android:textStyle="bold"
        android:gravity="center"/>

</LinearLayout>