<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/space_small"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/space_small"/>

        <ImageView
            android:id="@+id/albumCover"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/space_big"
            android:visibility="visible"
            android:contentDescription="@string/general_album_cover_content_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="albumNameLabel, artistNameLabel, playCountLabel"/>

        <TextView
            android:id="@+id/albumNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/detail_album_name_label"
            app:layout_goneMarginStart="@dimen/space_none"
            app:layout_goneMarginTop="@dimen/space_big"
            android:layout_marginStart="@dimen/space_small"
            app:layout_constraintTop_toTopOf="@id/albumCover"
            app:layout_constraintStart_toEndOf="@id/albumCover"/>

        <TextView
            android:id="@+id/albumName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextBlack"
            android:layout_marginStart="@dimen/space_mini"
            app:layout_constraintStart_toEndOf="@id/barrierLabels"
            app:layout_constraintTop_toTopOf="@id/albumNameLabel"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            tools:text="Best Of" />

        <TextView
            android:id="@+id/artistNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/detail_album_artist_label"
            android:layout_marginTop="@dimen/space_mini"
            app:layout_constraintTop_toBottomOf="@id/albumName"
            app:layout_constraintStart_toStartOf="@id/albumNameLabel"/>

        <TextView
            android:id="@+id/artistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/artistNameLabel"
            app:layout_constraintStart_toStartOf="@id/albumName"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            android:textColor="@color/colorTextBlack"
            tools:text="Artist"/>

        <TextView
            android:id="@+id/playCountLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/detail_album_streams_label"
            android:layout_marginTop="@dimen/space_mini"
            app:layout_constraintTop_toBottomOf="@id/artistName"
            app:layout_constraintStart_toStartOf="@id/artistNameLabel"/>

        <TextView
            android:id="@+id/playCountText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/playCountLabel"
            app:layout_constraintStart_toStartOf="@id/artistName"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            android:textColor="@color/colorTextBlack"
            tools:text="100.000"/>

        <TextView
            android:id="@+id/albumUrl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_mini"
            app:layout_constraintTop_toBottomOf="@id/playCountText"
            app:layout_constraintStart_toStartOf="@id/artistNameLabel"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            android:autoLink="web"
            android:textColor="@color/colorBlue"
            android:text="@string/detail_album_artist_url_label"/>

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:minHeight="28dp"
            android:maxHeight="28dp"
            android:numStars="1"
            android:rating="0"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="@dimen/space_mini"
            app:layout_constraintTop_toBottomOf="@id/albumUrl"
            app:layout_constraintStart_toStartOf="@id/albumUrl"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0"/>


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="albumCover, albumUrl"/>

        <TextView
            android:id="@+id/trackLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/barrierHeader"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            android:layout_marginTop="@dimen/space_default"
            android:text="@string/detail_album_tracks_label"/>

        <ListView
            android:id="@+id/listView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/space_default"
            app:layout_constraintTop_toBottomOf="@id/trackLabel"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            android:dividerHeight="1dp"
            android:layout_marginBottom="@dimen/space_mini"
            android:divider="@color/colorLightGrey"
            android:paddingBottom="@dimen/space_default" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/trackGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="trackLabel, trackGroup"/>

        <ProgressBar
            android:id="@+id/progressTracks"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toBottomOf="@id/barrierHeader"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            android:layout_marginTop="@dimen/space_colossal"/>

        <TextView
            android:id="@+id/trackLoadingText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/progressTracks"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            android:layout_marginTop="@dimen/space_default"
            android:text="@string/detail_album_loading_tracks"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/trackLoadingGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="progressTracks, trackLoadingText"/>

        <TextView
            android:id="@+id/noTracksAvailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_album_no_tracks_available"
            android:layout_marginTop="@dimen/space_colossal"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/barrierHeader"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>